<resources>
    <string name="app_name">Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="appTitle">AppInventory</string>
    <string name="product_access">Access by product</string>
    <string name="category_access">Access by category</string>
    <string name="warehouse_access">Access by warehouse</string>
    <string name="start_inventory">Start inventory</string>
    <string name="title_activity_popup_start_inventory">Inventory launch</string>
    <string name="title_activity_popup_ok_cancel">ActivityPopupOkCancel</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="my_products">My products</string>
    <string name="modify">Modify</string>
    <string name="my_categories">My categories</string>
    <string name="alphabetical_sort"><![CDATA[a>z]]></string>
    <string name="inventory_state">Inventory state</string>
    <string name="title_activity_my_categories">My categories</string>
    <string name="add">+</string>
    <string name="validate">OK</string>
    <string name="category_popup_title">Add a category</string>
    <string name="delete">Delete</string>
    <string name="delete_category_question">Do you really want to delete this category?</string>
    <string name="new_category">Enter the new category name:</string>
    <string name="delete_category_info">Be aware that products included in the category will not be deleted.</string>
    <string name="title_activity_product">Product details</string>
    <string name="quantity_and_storage">Quantity and location</string>
    <string name="total_stock">Stock total:</string>
    <string name="stock_value">Stock value:</string>
    <string name="product_description">Product description</string>
    <string name="suppress">Delete</string>
    <string name="instruction">Enter the following information:</string>
    <string name="new_warehouse_name">Warehouse name</string>
    <string name="warehouse_capacity">Storage capacity</string>
    <string name="warehouse_address">Warehouse address</string>
    <string name="warehouse_phone">Phone number</string>
    <string name="warehouse_location">Address</string>
    <string name="street">Street</string>
    <string name="streetNo">Street no</string>
    <string name="postalCode">ZIP code</string>
    <string name="city">City</string>
    <string name="country">Land</string>
    <string name="inventoried_elements">Inventoried elements</string>
    <string name="view_stock_button">View stock</string>
    <string name="free_space">Free space</string>
    <string name="phone_short">Phone:</string>
    <string name="warehouse_address_colon">Address:</string>
    <string name="delete_warehouse_option">By deleting the warehouse the stocks of its products will be reset to zero.</string>
    <string name="title_activity_stock_row">stock_row</string>
    <string name="title_activity_product_new_or_modify">Product data</string>
    <string name="select_category">-- Categories --</string>
    <string name="title_activity_stock_new_or_modify">Stock</string>
    <string name="places">places</string>
    <string name="controlled_colon">Controlled:</string>
    <string name="quantity_colon">Quantity:</string>
    <string name="select_warehouse">-- Warehouse --</string>
    <string name="inventory_running">Inventory in progress</string>
    <string name="enter_following_informations_colon">Enter the following information:</string>
    <string name="product_name">Product name</string>
    <string name="article_number">Product number</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="warehouse_colon">Warehouse:</string>
    <string name="inventory_shorted">Inv.</string>
    <string name="article_number_short">Prod Nb.</string>
    <string name="name_short">Name</string>
    <string name="category_short">Category</string>
    <string name="quantity_short">Qty</string>
    <string name="warehouse">Warehouse</string>
    <string name="categories_initial">C</string>
    <string name="title_activity_my_warehouses">My warehouses</string>
    <string name="title_activity_new_warehouse">New warehouse</string>
    <string name="warehouse_modification">Warehouse modification</string>
    <string name="modify_Category">Category name modification</string>
    <string name="warehouse_stock">Warehouse stock</string>
    <string name="products_initial">P</string>
    <string name="warehouses_initial">W</string>
    <string name="my_warehouses">My warehouses</string>
    <string name="stock_modify">Stock modification</string>
    <string name="no_warehousename">Enter a warehouse name.</string>
    <string name="no_category">No category</string>
    <string name="no_categoryName">Enter a category name to create a new category</string>
    <string name="inventory_finished_exclamation">Inventory finished!</string>
    <string name="no_warehouse">No warehouse</string>
    <string name="you_have_to_create_warehouse">You have to create at least one warehouse</string>
    <string name="stock_added">Stock added</string>
    <string name="stock_updated">Stock updated</string>
    <string name="product_created">Product created</string>
    <string name="product_modified">Product modified</string>
    <string name="category_colon">Category:</string>
    <string name="article_number_colon">Product no:</string>
    <string name="product_deleted">Product deleted</string>
    <string name="suppress_product_are_you_sure">Do you really want to delete this product?</string>
    <string name="stock_colon">Stock:</string>
    <string name="value_colon">Value:</string>
    <string name="preferences">Preferences</string>
    <string name="language">Language</string>
    <string name="choose_language">Choose your language</string>
    <string name="question_restart_inventory">Do your really want to launch the inventory?\n\nIf yes, the inventory process will be restarted and all you products will be displayed as not inventoried.</string>
    <string name="progress_of_your_inventory_colon">Inventory progress:</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="price_colon">Price:</string>
    <string name="add_product">Add product</string>
    <string name="modify_product">Modify product</string>
    <string name="new_stock">New stock</string>
    <string name="no_product_name">You have to enter a product name to create a new product</string>
    <string name="name_can_not_be_empty">The name can not be empty</string>
    <string name="warehouse_contains_already">This warehouse contains already </string>
    <string name="and_its_capacity"> and its capacity is </string>
    <string name="quantity_not_updated">Quantity not updated</string>
    <string name="price_not_changed">Price not changed</string>
    <string name="btn_next">&gt;</string>
    <string name="btn_previous"><![CDATA[<]]></string>
    <string name="home">home</string>
    <string name="stock_suppressed">Stock suppressed</string>
    <string name="synchronize_data">Synchronize</string>
    <string name="Synchronized">Synchronized</string>


</resources>
