<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_header_backcolor">

    <TextView
        android:layout_width="@dimen/square_width"
        android:layout_height="@dimen/square_height"
        android:layout_weight="0"
        android:id="@+id/square"
        android:text="@string/inventory_shorted"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:id="@+id/warehouse"
        android:text="@string/warehouse"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/quantity"
        android:text="@string/quantity_short"/>

</LinearLayout>