<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/back_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/appTitle"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/text_color"
                />

            <include layout="@layout/blue_line" />

            <TextView
                android:id="@+id/txtInventoryRunning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inventory_running"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/flashy"/>

            <TextView
                android:id="@+id/txtInventoryState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/main_activity_bottom_margin"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/flashy" />

            <TextView
                android:id="@+id/txtProductAccess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_access"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/light_blue" />

            <include layout="@layout/blue_line" />

            <TextView
                android:id="@+id/txtCategoryAccess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category_access"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/light_blue" />

            <include layout="@layout/blue_line" />

            <TextView
                android:id="@+id/txtWarehouseAccess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/warehouse_access"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/light_blue"/>

            <include layout="@layout/blue_line" />

            <Button
                android:id="@+id/buttonStartInventory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/main_activity_margin"
                android:background="@color/button_background"
                android:text="@string/start_inventory"
                android:textColor="@color/button_text"/>

            <Button
                android:id="@+id/buttonSynchronize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/main_activity_bottom_margin"
                android:background="@color/button_background"
                android:text="@string/synchronize_data"
                android:textColor="@color/button_text"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
