<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/button_background">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_popup_title"
        android:textSize="20dp"
        android:textColor="@color/light_blue"
        android:id="@+id/txtTitle"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@id/txtTitle"
        android:background="@color/light_blue"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitle"
        android:layout_marginTop="30dp"
        android:textColor="@color/text_color"
        android:id="@+id/txtQuestion"/>



    <EditText
        android:id="@+id/userEntry"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="40dp"
        android:layout_below="@+id/txtQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:inputType="text"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/userEntry">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/buttonCancel"
            android:text="@string/cancel"
            android:textColor="@color/text_color"
            android:background="@color/button_background"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/buttonValidate"
            android:text="@string/validate"
            android:textColor="@color/text_color"
            android:background="@color/button_background"/>



    </LinearLayout>
</RelativeLayout>
