<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.androidprojects.inventaireii.MyCategories"
    android:background="@color/back_color">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTitle"
            android:text="@string/my_categories"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text_color"/>

        <include layout="@layout/blue_line" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_activity_bottom_margin"
            android:id="@+id/layoutCategories">

            <View
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/indicator_neutral"
                android:id="@+id/squareSortbyState" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:id="@+id/alphabeticalOrder"
                android:text="@string/alphabetical_sort"
                android:textColor="@color/text_color"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:id="@+id/txtStockValue"
                android:text="@string/inventory_state"
                android:textColor="@color/text_color"/>

        </LinearLayout>

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lvCategories">


        </ListView>


    </LinearLayout>

</RelativeLayout>